[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/NextTetrominoes.gd" type="Script" id=1]
[ext_resource path="res://gui/TetrominoHolder.tscn" type="PackedScene" id=2]

[node name="NextTetrominoes" type="VBoxContainer"]
margin_right = 128.0
margin_bottom = 320.0
custom_constants/separation = 128
script = ExtResource( 1 )

[node name="TetrominoHolder1" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 0.0

[node name="TetrominoHolder2" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 128.0

[node name="TetrominoHolder3" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 256.0
margin_right = 128.0
margin_bottom = 256.0

